--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
